[package]
name = "local_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive","rc"] }
serde_json = "1.0"
points = {path="../common/points"}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"